<resources>
    <string name="app_name">TV Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="input_title_label">Title</string>
    <string name="input_season_label">Season</string>
    <string name="spacing_five">     </string>
    <string name="input_episode_label">Episode</string>
    <string name="input_air_date_label">Next Air Date</string>
    <string name="unknown_air_date">Unknown Air Date</string>
    <string name="text_size">30sp</string>
</resources>
